<resources>
    <string name="app_name">SRC Voting App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="chk_remember_me">Remember me?</string>

    <!--Strings related to User registration-->
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_password_reg">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_go_back">Go Back</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_ethnicity">Ethnicity</string>
    <string name="prompt_portfolio">Portfolio</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="asterisk">*</string>
    <string name="personal_details">Personal Details</string>
    <string name="statistic_details">Statistical Details</string>
    <string name="action_send_link">Send reset link to Email</string>
    <string name="action_next">Next</string>
    <string name="prompt_new_user">Create Account</string>
    <string name="course">Course</string>

    <string name="title_activity_vote">VoteActivity</string>

    <string name="tab_text_1">Prs</string>
    <string name="tab_text_2">DPr</string>
    <string name="tab_text_3">SGn</string>
    <string name="tab_text_4">FnO</string>
    <string name="tab_text_5">CLA</string>
    <string name="tab_text_6">SpO</string>
    <string name="tab_text_7">PRO</string>
    <string name="tab_text_8">HWO</string>
    <string name="tab_text_9">PCO</string>
    <string name="tab_text_10">SAf</string>
    <string name="tab_text_11">EDO</string>
    <string name="tab_text_12">TrO</string>
    <string name="tab_text_13">Rvw</string>

    <string name="action_previous">Previous</string>
    <string name="action_add_candidate">Add Candidate</string>
    <string name="action_add_party">Add Party</string>
    <string name="action_view_results">View Results</string>
    <string name="action_set_election_period">Start Elections</string>
    <string name="assign_portfolio">Assign Portfolio</string>
    <string name="search_email">Search Email</string>
    <string name="found_candidate">Found Candidate</string>
    <string name="prompt_username">Student Name</string>
    <string name="registered_course">Registered Course</string>
    <string name="portfolio_candidate">Portfolio Candidate</string>
    <string name="dash">-</string>
    <string name="action_refresh">Refresh</string>
    <string name="submit_vote">Submit Votes</string>
    <string name="selected_candidate">Selected Candidate</string>
    <string name="review_votes">Review Votes</string>
    <string name="action_show_insights">Show Insights</string>
    <string name="title_activity_student">Student Profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="elect_candidates">Elect Candidates</string>
    <string name="manage_parties">Manage Parties</string>
    <string name="select_all">Select All</string>
    <string name="daso">DASO\nDemocratic Alliance Student Organisation</string>
    <string name="effsc">EFFSC\nEconomic Freedom Fighters Students\' Command</string>
    <string name="sasco">SASCO\nSouth African Student Congress</string>
    <string name="action_go_to_profile">Go to Profile</string>
    <string name="action_go_home">Go To Home Page</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_party">Select Party</string>
    <string name="register_party">Register Party/s</string>
    <string name="reset_party">Reset Party/s</string>
    <string name="voted">Voted:</string>
    <string name="verify_fields">Please make sure all required fields are correct.</string>

</resources>
