<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AdminActivity">

    <ScrollView
        android:id="@+id/frmAdminMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_175dp"
                android:layout_height="@dimen/dimen_175dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginBottom="@dimen/appbar_padding_top"
                android:background="@drawable/spinner"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddCandidateAdm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableEnd="@drawable/ic_add_person"
                    android:gravity="center"
                    android:onClick="onClick_AddCandidate"
                    android:paddingStart="15dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="25dp"
                    android:text="@string/action_add_candidate"
                    android:textColor="@color/colorButtonForeground"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btnManageParties"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableEnd="@drawable/ic_group"
                    android:drawableTint="@color/colorButtonForeground"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="25dp"
                    android:text="@string/manage_parties"
                    android:textColor="@color/colorButtonForeground"
                    android:textStyle="bold"
                    android:onClick="onClick_ManageParties"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStartElectionsAdm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableEnd="@drawable/ic_timer"
                    android:gravity="center"
                    android:onClick="onClick_StartElections"
                    android:paddingStart="15dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="25dp"
                    android:text="@string/action_set_election_period"
                    android:textColor="@color/colorButtonForeground"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btnViewResultsAdm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableEnd="@drawable/ic_poll"
                    android:gravity="center"
                    android:onClick="onClick_ViewResults"
                    android:paddingStart="15dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="25dp"
                    android:text="@string/action_view_results"
                    android:textColor="@color/colorButtonForeground"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>